[package]
name = "happy_ctrl"
version = "0.1.1"
edition = "2024"

[dependencies]
btleplug = { version = "0.11.8", features = ["serde"] }
tokio = {version = "1.45.1", features = ["full"]}
futures = "0.3.31"
log = "0.4.27"
anyhow = "1.0.98"
clap = {version = "4.5.40", features = ["derive"]}
thiserror = "2.0.12"
simple_logger = "5.0.0"
